--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ var div = d3.select("body")
     		.style("opacity", 0);
 
 // Load in my states data!
-d3.csv("data/stateslived.csv", function(data) {
+d3.csv("data/healthQuality.csv", function(data) {
 color.domain([0,1,2,3]); // setting the range of the input data
 
 // Load GeoJSON data and merge with states data
@@ -96,10 +96,10 @@ d3.json("data/us-states.json", function(json) {
 for (var i = 0; i < data.length; i++) {
 
 	// Grab State Name
-	var dataState = data[i].state;
+	var dataState = data[i].State;
 
 	// Grab data value 
-	var dataValue = data[i].visited;
+	var dataValue = data[i].poorHealthPerc;
 
 	// Find the corresponding state inside the GeoJSON
 	for (var j = 0; j < json.features.length; j++)  {
